eks-lab-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: containers-lab
  labels: 
    name: containers-lab
