eks-lab-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-app-deployment
#  namespace: development
  labels:
    app: lab-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab-app
  template:
    metadata:
      labels:
        app: lab-app
    spec:
      containers:
      - name: lab-app-container
        image: $ECR_REPO_URI:v1
        ports:
        - containerPort: 80
