eks-lab-app/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: stp-lab-service
#  namespace: development
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: lab-app
